# imersao-ia-alura-google

./: .env  .gitignore  README.md  app.py  main.py  proj.py  pyproject.toml  requirements.txt
wsagent/: agents.py  gemini.py  services.py  tools.py  utils.py  whatsapp.py
