[project]
name = "imersao-ia-alura-google"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.5.0",
    "google-genai>=1.15.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
]
